--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/express-fileupload": "^1.1.3",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.21"
+    "@types/mongoose": "^5.7.21",
+    "@types/uniqid": "^5.2.0"
   }
 }
