--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "engines": { 
-    "node": "≥ 12.9.0",
-    "npm": "≥ 6.10.2"
+    "node": "12.9.0",
+    "npm": "6.10.2"
   },
   "description": "",
   "main": "index.js",
