--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist"
+    "start": "node index.js"
   },
   "author": "David rodriguez",
   "license": "ISC",
