--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.6",
     "@types/express-fileupload": "^1.1.3",
     "@types/jsonwebtoken": "^8.5.0",
